# firefly_ai_resource_analyzer

./: .gitignore  Dockerfile.localstack  README.md  docker-compose.yml  pyproject.toml
docker/localstack/init/: 10-create-bucket.sh
examples/: cloud.json  iac.json
scripts/: bootstrap_localstack.sh
src/resource_analyzer/: __init__.py  __main__.py  cli.py  diff.py  loader.py  models.py  utils.py
tests/: test_cli_smoke.py  test_diff.py  test_loader.py
